# cpp

./: .clang_complete  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  fs_test.cpp  main.cp  main.cpp  numout.cpp  pull_request_template.md  strcin.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
EvtCtrMSVC/: EvtCtr.cpp  EvtCtr.h  EvtCtr.sln  EvtCtr.vcxproj  EvtCtrTest.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h
SimpleCipher/: ReadMe.txt  SimpleCipher.cpp  SimpleCipher.vcxproj  SimpleCipher.vcxproj.filters  stdafx.cpp
Sorts/: InsertionSort.cpp  InsertionSort.h  MergeSort.cpp  MergeSort.h  MergeSortSinLink.cpp  MergeSortSinLink.h  MergeSortSinLinkRec.cpp  MergeSortSinLinkRec.h  MergeSortSinLinkTest.cpp  MergeSortSinLinkTest.h  QuickSort.cpp  QuickSort.h  SelectionSort.cpp  SelectionSort.h  SortInterfaces.h  SortTests.cpp  SortTests.h  Sorts.vcxproj  Sorts.vcxproj.filters  printArray.cpp  printArray.h  sortUtil.h  sortsMain.cpp  sortsNaive.cpp  stdafx.h
SpraxLib/: SpraxLib.sln
SpraxLib/SpraxLib/: ReadMe.txt  SpraxLib.vcxproj  SpraxLib.vcxproj.filters  Sx.cpp  Sx.h  stdafx.cpp  stdafx.h  targetver.h
SpraxLib/SpraxLib.xcodeproj/: project.pbxproj
SpraxTest/: SpraxTest.sln
SpraxTest/SpraxTest/: ReadMe.txt  SpraxTest.cpp  SpraxTest.vcxproj  SpraxTest.vcxproj.filters  stdafx.cpp  targetver.h
cmake/: CMakeLists.txt
format/: .editorconfig  Duh.cc  examples.cc  matrices.cpp
graphs/: BVGraph.hpp  DEGraph.cpp  DEGraph.hpp  DVGraph.cpp  DVGraph.hpp  GridGuards.cpp  GridGuards.hpp  GridGuardsTest.cpp  GridGuardsTest.hpp  ReadMeGraphs.txt  Vertex.hpp  graphs.hpp  graphs.sln  graphs.vcxproj  graphs.vcxproj.filters  graphsMain.cpp  stdafx.cpp  stdafx.h
graphs/graphs.xcodeproj/: project.pbxproj
hello/: .editorconfig  hello.cpp
histarea/: histarea.sln
histarea/histarea/: ReadMe.txt  histarea.cpp  histarea.vcxproj  histarea.vcxproj.filters  stdafx.cpp  stdafx.h
hrank/: badlint.cpp  byref.cpp  invec.cpp
include/: std_gtest.h
iqa/ltc/: bit_set_counts.cpp  longest_common_prefix.cpp  pal_max.cpp
matrix/: .clang-format  CMakeLists.txt  matrices.cpp
matrix/build_xcode/matrix.xcodeproj/: project.pbxproj
matrix/examples/: assign.cc
matrix/include/: matrix.h
matrix/include/matrix/: matrix.h
matrix/src/: matrices.cc  matrix.cc
matrix/tests/: test_matrix.cc
multi/: ReadMe.txt
multi/MyCout/: CoutOne.cpp  CoutOne.h  CoutOne.hpp  MyCout.vcxproj  MyCout.vcxproj.filters
multi/MyDemo/: MyDemo.sln  MyDemo.vcxproj  MyDemo.vcxproj.filters
multi/MyPrint/: MyPrint.vcxproj  MyPrint.vcxproj.filters  PrintOne.h  printOne.cpp  printOne.h
observer/: ReadMe.txt  developer.cpp  developer.h  dp_const_iterator.h  dp_container.h  dp_exception.h  dp_iterator.h  dp_link.h  dp_list.h  dp_map.h  dp_pair.h  dp_stack.h  dp_vector.h  manager.cpp  manager.h  meeting.cpp  meeting.h  observer.cpp  observer.vcxproj  observer.vcxproj.filters  participant.cpp  participant.h  setup_class.cpp  setup_class.h  stdafx.cpp  stdafx.h  to_string.h  use_class.cpp  use_class.h
octal2int/: octal2int.sln
octal2int/octal2int/: Copy of octal2int.cpp  octal2int.cpp  octal2int.vcxproj  octal2int.vcxproj.filters
rank/: rank.sln
rank/rank/: ReadMe.txt  rank.cpp  rank.vcxproj  rank.vcxproj.filters  stdafx.cpp
stacks/: ReadMeStacks.txt  ocvRandomRows.cpp  stacks.cpp  stacks.sln  stacks.vcxproj.filters  stdafx.h
stacks/stacks/: Thumbs.db  namedCtorHiddenDtor.cpp  ocvDisplay.cpp  stacks.vcxproj
test00/test_0045h_jump_game_array_hopper_2/: test_0045h_jump_game_array_hopper_2.cpp
test00/test_0055m_jump_game_array_hopper/: test_0055m_jump_game_array_hopper.cpp  test_0055m_jump_game_array_hopper.py
test00/test_0055m_jump_game_array_hopper_1/: test_0055m_jump_game_array_hopper_1.cpp
test14/test_1453h_max_darts_in_any_circle/: test_1453h_max_darts_in_any_circle.cpp  test_1453h_max_darts_in_any_circle.py
thread/: detach.cc
tmpl/: backup_to_num.cpp  boost_zip.cc  car_builder.cpp  cli.cpp  cli.sh  cmap.cpp  copy_dir_rec.cpp  copy_into_list.cpp  datetimes.cpp  dirpoll.cpp  do_it.cpp  do_it.sh  drake_logs.cpp  enum_11.cpp  enum_11_typed.cpp  enum_11_typed.h  enum_dupe.cpp  enum_temp.cpp  enum_temp.h  eq_eps.cpp  file_tree.cpp  fmtl.cpp  fts_tree.cpp  gen_factory_fn_ptr.cpp  glob.cpp  host_ip.cpp  hostnip.cpp  log_name.cpp  map_const.cpp  map_var.cpp  mscc.cpp  msgpack_utils.h  msgpacker.cpp  ostr.cc  ostr.cpp  pali.cpp  palstr.cpp  pybind_ex.cpp  remove_dir_rec.cpp  spdlogs.cpp  (+5 more)
wordGhost/: wordGhost.sln  wordGhost_log.txt
wordGhost/wordGhost/: EvOdNode.cpp  EvOdNode.hpp  NitWit.cpp  NitWit.hpp  ReadMe.txt  SubWords.cpp  SubWords.hpp  SubWords_log.txt  Trie.cpp  Trie.hpp  TrieNode.cpp  TrieNode.hpp  WordMap.hpp  WordNode.cpp  WordNode.hpp  WordRectFinder.cpp  WordRectFinder.hpp  WordRectSearchMgr.cpp  WordRectSearchMgr.hpp  WordTrie.cpp  WordTrie.hpp  log.txt  spraxUtil.cpp  spraxUtil.hpp  stdafx.cpp  stdafx.h  testC++.cpp  testSemaphore.cpp  testSystem.cpp  testThreads.cpp  wordGhost.cpp  wordGhost.vcxproj  wordGhost.vcxproj.filters  wordRectMain.cpp
wordRect/: wordRect.sln
wordRect/wordRect/: TrieNode.cpp  TrieNode.hpp  TrieTree.cpp  TrieTree.hpp  wordRect.cpp  wordRect.vcxproj  wordRect.vcxproj.filters
wordRectMulti/: t.txt  wordRectMulti.sln  word_log_MT_a.txt
wordRectMulti/wordRectMulti/: CharFreqMap.cpp  CharFreqMap.hpp  CharMap.cpp  CharMap.hpp  NitWit.cpp  NitWit.hpp  TrieNode.cpp  TrieNode.hpp  TrixNode.cpp  TrixNode.hpp  WordLatticeFinder.cpp  WordLatticeFinder.hpp  WordRectFinder.cpp  WordRectFinder.hpp  WordRectFinder.hpp.txt  WordRectPrinter.cpp  WordRectPrinter.hpp  WordTrie.cpp  WordTrie.hpp  WordWaffleFinder.cpp  WordWaffleFinder.hpp  WordWaffleFinderSearchA.cpp  main.cpp  mainAgain.cpp  sets.hpp  testSemaphore.cpp  threadTest.cpp  tst.cpp  tst1.cpp  tst2.cpp  tst3.cpp  wordPlatform.cpp  wordPlatform.h  wordRectMain.cpp  wordRectMain.hpp  wordRectMulti.txt  wordRectMulti.vcxproj  wordRectMulti.vcxproj.filters  (+6 more)
words/: words.sln  words_log.txt
(+96 files in other folders)
